Incorporating a variety of changes and pull requests, after things got desync'd a bit

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <h2>Grab a Draft</h2>
 <ul>
   <li><a href="https://github.com/achlipala/frap">Source on GitHub</a></li>
-  <li><a href="frap.pdf">Quasi-latest PDF draft</a></li>
+  <li><a href="frap_book.pdf">Quasi-latest PDF draft</a></li>
   <li><a href="frap.tgz">Quasi-latest source-code tarball</a></li>
 </ul>
 </div>
