Update book index page for this semester

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <h3>Classes where FRAP is/was the primary text</h3>
 <ul>
-<li>6.887 at MIT <a href="https://frap.csail.mit.edu/">(Spring 2016)</a></li>
+<li>6.887 at MIT (<a href="https://frap.csail.mit.edu/">Spring 2017</a>, Spring 2016)</li>
 </ul>
 
 </div>
