--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
 <h3>Classes where FRAP is/was the primary text</h3>
 <ul>
 <li>6.887 at MIT (<a href="https://frap.csail.mit.edu/">Spring 2017</a>, Spring 2016)</li>
+<ul>
+  <li><a href="https://github.com/mit-frap/spring17">Spring 2017 exercises</a></li>
+  <li><a href="https://github.com/mit-frap/spring16">Spring 2016 exercises</a></li>
+</ul>
 </ul>
 
 </div>
