--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
 
 <h3>Classes where FRAP is/was the primary text</h3>
 <ul>
-<li>6.887 at MIT (<a href="https://frap.csail.mit.edu/">Spring 2017</a>, Spring 2016)</li>
+<li>6.822 at MIT (<a href="https://frap.csail.mit.edu/">Spring 2018</a>, Spring 2017 [as 6.887], Spring 2016 [as 6.887])</li>
 <ul>
+  <li>Spring 2018 exercises [coming soon]</li>
   <li><a href="https://github.com/mit-frap/spring17">Spring 2017 exercises</a></li>
   <li><a href="https://github.com/mit-frap/spring16">Spring 2016 exercises</a></li>
 </ul>
