--- a/index.html
+++ b/index.html
@@ -23,12 +23,13 @@
 
 <h3>Classes where FRAP is/was the primary text</h3>
 <ul>
-<li>6.822 at MIT (<a href="https://frap.csail.mit.edu/">Spring 2018</a>, Spring 2017 [as 6.887], Spring 2016 [as 6.887])</li>
-<ul>
-  <li>Spring 2018 exercises [coming soon]</li>
-  <li><a href="https://github.com/mit-frap/spring17">Spring 2017 exercises</a></li>
-  <li><a href="https://github.com/mit-frap/spring16">Spring 2016 exercises</a></li>
-</ul>
+  <li>CSE 505 at U. Washington (<a href="https://sites.google.com/cs.washington.edu/cse-505-18au">Fall 2018</a>)</li>
+  <li>6.822 at MIT (<a href="https://frap.csail.mit.edu/">Spring 2018</a>, Spring 2017 [as 6.887], Spring 2016 [as 6.887])</li>
+  <ul>
+    <li><a href="https://github.com/mit-frap/spring18">Spring 2018 exercises</a></li>
+    <li><a href="https://github.com/mit-frap/spring17">Spring 2017 exercises</a></li>
+    <li><a href="https://github.com/mit-frap/spring16">Spring 2016 exercises</a></li>
+  </ul>
 </ul>
 
 </div>
