Link to Spring 2020 users of the book

--- a/index.html
+++ b/index.html
@@ -21,15 +21,18 @@
 <div class="project">
 <h2>Use in classes</h2>
 
-<h3>Classes where FRAP is/was the primary text</h3>
+<h3>Classes where FRAP is/was a primary text</h3>
 <ul>
-  <li>CSE 505 at U. Washington (<a href="https://sites.google.com/cs.washington.edu/cse-505-18au">Fall 2018</a>)</li>
-  <li>6.822 at MIT (<a href="https://frap.csail.mit.edu/">Spring 2018</a>, Spring 2017 [as 6.887], Spring 2016 [as 6.887])</li>
+  <li>6.822 at MIT (<a href="https://frap.csail.mit.edu/">Spring 2020</a>, Spring 2018, Spring 2017 [as 6.887], Spring 2016 [as 6.887])</li>
   <ul>
+    <li><a href="https://github.com/mit-frap/spring20">Spring 2020 exercises</a></li>
     <li><a href="https://github.com/mit-frap/spring18">Spring 2018 exercises</a></li>
     <li><a href="https://github.com/mit-frap/spring17">Spring 2017 exercises</a></li>
     <li><a href="https://github.com/mit-frap/spring16">Spring 2016 exercises</a></li>
   </ul>
+  <li>EECS 755 at U. Kansas (<a href="http://perry.alexander.name/eecs755/">Spring 2020</a>)</li>
+  <li>CS6225 at IIT Madras (<a href="http://kcsrk.info/cs6225_s20_iitm/">Spring 2020</a>)</li>
+  <li>CSE 505 at U. Washington (<a href="https://sites.google.com/cs.washington.edu/cse-505-18au">Fall 2018</a>)</li>
 </ul>
 
 </div>
