Separate out library code with its own license

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <li><a href="https://github.com/achlipala/frap">Source on GitHub</a></li>
   <li><a href="frap_book.pdf">Quasi-latest PDF draft</a></li>
   <li><a href="frap.tgz">Quasi-latest source-code tarball</a></li>
+  <li><a href="fraplib.tgz">Quasi-latest source-code tarball, library only</a> (warning: the author really does not recommend using it in serious projects!)</li>
 </ul>
 </div>
 
