New semester at MIT

--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
 
 <h3>Classes where FRAP is/was a primary text</h3>
 <ul>
-  <li>6.822 at MIT (<a href="https://frap.csail.mit.edu/">Spring 2020</a>, Spring 2018, Spring 2017 [as 6.887], Spring 2016 [as 6.887])</li>
+  <li>6.822 at MIT (<a href="https://frap.csail.mit.edu/">Spring 2021</a>, Spring 2020, Spring 2018, Spring 2017 [as 6.887], Spring 2016 [as 6.887])</li>
   <ul>
+    <li><a href="https://github.com/mit-frap/spring21">Spring 2021 exercises</a></li>    
     <li><a href="https://github.com/mit-frap/spring20">Spring 2020 exercises</a></li>
     <li><a href="https://github.com/mit-frap/spring18">Spring 2018 exercises</a></li>
     <li><a href="https://github.com/mit-frap/spring17">Spring 2017 exercises</a></li>
