Updating for Rocq 9.0.0

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <div class="summary" style="overflow: hidden">
 
-<p>This is the web site for the early stages of a book introducing both machine-checked proof with <a href="http://coq.inria.fr/">the Coq proof assistant</a> and approaches to formal reasoning about program correctness.</p>
+<p>This is the web site for the early stages of a book introducing both machine-checked proof with <a href="https://rocq-prover.org/">the Rocq proof assistant</a> and approaches to formal reasoning about program correctness.</p>
 
 <h2>Grab a Draft</h2>
 <ul>
@@ -24,8 +24,9 @@
 
 <h3>Classes where FRAP is/was a primary text</h3>
 <ul>
-  <li>6.822 at MIT (<a href="https://frap.csail.mit.edu/">Spring 2022</a>, Spring 2021, Spring 2020, Spring 2018, Spring 2017 [as 6.887], Spring 2016 [as 6.887])</li>
+  <li>6.512 at MIT (<a href="https://frap.csail.mit.edu/">Fall 2025</a>, Spring 2023 [as 6.822], Spring 2021 [as 6.822], Spring 2020 [as 6.822], Spring 2018 [as 6.822], Spring 2017 [as 6.887], Spring 2016 [as 6.887])</li>
   <ul>
+    <li><a href="https://github.com/mit-frap/spring23">Spring 2023 exercises</a></li>
     <li><a href="https://github.com/mit-frap/spring22">Spring 2022 exercises</a></li>
     <li><a href="https://github.com/mit-frap/spring21">Spring 2021 exercises</a></li>
     <li><a href="https://github.com/mit-frap/spring20">Spring 2020 exercises</a></li>
